<resources>
    <string name="app_name">CHN On the Go</string>
    <string name="app_logo_alt">Digital Campus Logo</string>
    <string name="search_hint">Search CCH</string>
    <string name="menu_search">Search</string>
    <string name="menu_download">Download Courses</string>
    <string name="menu_download_all">Download All</string>
    <string name="menu_language">Change language</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_stop_read_aloud">Stop reading</string>
    <string name="service_tracker">OppiaMobile Tracker Service</string>
    <string name="title_about">About</string>
    <string name="title_baseline">Baseline</string>
    <string name="title_help">Help</string>
    <string name="title_download_activity">Manage courses</string>
    <string name="title_activity_course_index">Course Index</string>
    <string name="title_activity_course">Activity</string>
    <string name="title_course_meta">About</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_prefs">Settings</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="version">Version: %1$s</string>
    <string name="title_download_media">Download Media</string>
    <string name="title_points">Your Points</string>
    <string name="activity_course_button_prev">&lt;</string>
    <string name="activity_course_button_next">&gt;</string>
    <string name="widget_quiz_next">Next &gt;&gt;</string>
    <string name="widget_quiz_prev">&lt;&lt; Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
    <string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
    <string name="widget_quiz_results_restart">Retake this quiz</string>
    <string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
    <string name="widget_quiz_baseline_goto_course">Continue to course &gt;&gt;</string>
    <string name="widget_quiz_image_caption">Press the image to view larger version</string>
    <string name="widget_quiz_feedback_response_title">You answered: </string>
    <string name="widget_quiz_feedback_feedback_title">Feedback: </string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>
    <string name="course_context_reset">Reset</string>
    <string name="course_context_delete">Delete</string>
    <string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
    <string name="course_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>
    <string name="no_courses">There are no courses currently installed</string>
    <string name="prefAdvanced">Advanced settings</string>
    <string name="prefBackgroudDataConnect">Background activity tracker</string>
    <string name="prefBackgroudDataConnect_summary">Send activity logs even when this application isn\'t running</string>
    <string name="prefLanguage">Preferred Language</string>
    <string name="prefHighlightCompleted">Highlight completed activities</string>
    <string name="prefNoScheduleReminders">Number of suggested activities</string>
    <string name="prefNoScheduleReminders_summary">How many suggested activities to display</string>
    <string name="prefServer">Server</string>
    <string name="prefServerTimeoutConnection">Connection timeout</string>
    <string name="prefServerTimeoutResponse">Response timeout</string>
    <string name="prefShowScheduleReminders">Display suggested activities</string>
    <string name="prefShowScheduleReminders_summary">Show which activities you are due to complete next</string>
    <string name="prefShowSectionNumbers">Show section numbers</string>
    <string name="notification_course_update_title">New course updates</string>
    <string name="notification_course_update_text">Updates are available for your courses.</string>
    <string name="title_login">Login</string>
    <string name="login_username_title">Username</string>
    <string name="login_password_title">Password</string>
    <string name="title_register">Register</string>
    <string name="register_form_username_title">Username</string>
    <string name="register_form_email_title">Email address</string>
    <string name="register_form_firstname_title">First name</string>
    <string name="register_form_lastname_title">Last name</string>
    <string name="register_form_password_title">Password</string>
    <string name="register_form_password_again_title">Password (again)</string>
    <string name="register_btn_text">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="open">Open</string>
    <string name="alert_pretest">Pre-test</string>
     <string name="monthTitleFont">roboto_light</string>
    <string name="dayOfWeekFont">roboto_regular</string>
    <string name="dayOfMonthFont">roboto_light</string>
    <string name="currentDayOfMonthFont">roboto_light</string>
    <string name="alert_pretest_summary">This course contains a pre-test which you need to complete before you can view the full course.</string>
    <string name="tag_label">%1$s (%2$d)</string>
	              <string name="next">Next</string>
	              <string name="str_headache">Headache</string>
<string name="str_severe_anaemia">Severe anaemia</string>
<string name="str_anaemia_moderate">Moderate Anaemia</string>
<string name="str_anaemia_no">No Anaemia</string>
<string name="str_encounterd_client_given_birth_last_2weeks">Are you encountering a client who has given birth in her home or community in the last 2 weeks</string>
	              <string name="str_difficulty_breathing">Difficulty breathing</string>
	              <string name="str_postpartum_family_planning">Postpartum Family Planning</string>
	              <string name="str_pnc_visits">PNC Visits</string>
	              <string name="str_return_first_follow_up">Return for first follow-up in:</string>
	              <string name="str_pnc_visit_1">PNC visit 1 </string>
	              <string name="str_pnc_visit_2">PNC visit 2</string>
	              <string name="str_pnc_visit_3">PNC visit 3 </string>
	              <string name="str_within_48_hr_delivery">Within 48 hours of delivery</string>
	              <string name="str_6_7_days_after_delivery">6-7 days after delivery</string>
	              <string name="str_6_weeks_after_delivery">6 weeks after delivery</string>
	              <string name="str_advise_mother_when_return_health_facility_immediately">Advise Mother When to Return to the Health Facility IMMEDIATELY</string>
	              <string name="str_breastfeeding_poorly">Breastfeeding poorly</string>
	              <string name="str_reduced_activity">Reduced activity</string>
	              <string name="str_becomes_sicker">Becomes sicker</string>
	              <string name="str_develops_fever">Develops a fever</string>
	              <string name="str_feels_usually_cold">Feels usually cold</string>
	              <string name="str_fast_breathing">Fast breathing</string>
	              <string name="str_palms_soles_appear_yelllow">Palms &amp; soles appear yellow</string>
	              <string name="str_anc_when3">3rd focused ANC visit at 32 weeks of gestation</string>
	              <string name="str_intermittent_preventive_treatment_with_sulf">Intermittent Preventive Treatment (IPTp) with Sulfadoxine-Pyrimethamine (SP) for Pregnant Women</string>
	              <string name="str_target_groups_for_iptp">Target groups for IPTp using SP include:</string>
	              <string name="str_all_preg_women_no_malaria_16_36">All pregnant women with no signs clinical malaria whose pregnancies are between 16-36 weeks of gestation</string>
	              <string name="str_adolescent_preg_10_24">Adolescent and young pregnant women (10-24 years)</string>
	              <string name="str_preg_women_with_sickle_cell">Pregnant women with sickle cell disease</string>
	              <string name="str_preg_women_ff_conditions_exempted_from_sp">Pregnant women with the following conditions should be exempted from using SP</string>
	              <string name="str_women_1st_trimester_preg">Women in their 1st trimester of pregnancy (first 3 months)</string>
	              <string name="str_women_known_to_have_glucose_6_phosphate">Women known to have Glucose-6-Phosphate Dehydrogenase (G6PD) enzyme deficiency, either full or partial defect</string>
	              <string name="str_women_known_severe_liver_disease">Women known to have severe liver disease</string>
	              <string name="str_women_with_unexplained_recurrent_jaundice">Women with unexplained recurrent jaundice</string>
	              <string name="str_women_allergic_sulphur">Women who are known to be allergic to sulphur-containing drugs or pyrimethamine component</string>
	              <string name="str_women_received_treatment_sulphur_drugs">Women who have received treatment with sulphur-based drugs, e.g. cotrimoxazole within 4 weeks of being seen at the clinic</string>
	              <string name="str_women_hiv_aids_cotrimoxazole">Women with HIV/AIDS who have been put on cotrimoxazole for opportunistic infections</string>
	              <string name="str_women_preg_beyond_36">Women with pregnancy beyond 36 weeks (8 months) gestation</string>
	              <string name="str_women_breastfeeding">Women breastfeeding</string>
	              <string name="str_treatement_uncomplicated_malaria_preg_women">Treatment for Uncomplicated Malaria in Pregnant Women</string>
	              <string name="str_women_preg_1st_trim">Women in their pregnancy and in their 1st trimester are at greater risk of developing clinical malaria.  The following signs and symptoms may occur:</string>
	              <string name="str_lassitube">Lassitude</string>
	              <string name="str_fatigue">Fatigue</string>
	              <string name="str_abdominal_discomfort">Abdominal discomfort</string>
	              <string name="str_muscle_joint_aches">Muscle and joint aches</string>
	              <string name="str_maybe_fever_chills_prespiration_anorexia">These maybe followed by fever, chills, perspiration, anorexia, vomiting and worsening malaise.</string>
	              <string name="str_preg_malaria_womb_contraction">During pregnancy malaria may also be associated with womb contraction or even start of labour and increased or reduced fetal movements.  Most of these signs and symptoms are non-specific and may occur with other infectious condition such as viral infections.</string>
	              <string name="str_note_pregnant_women_symptoms">Note: Pregnant women can also present with symptoms (such as dizziness, poor appetite, etc), which are not typical symptoms of malaria but may be the only indication they have clinical malaria</string>
	              <string name="str_1st_trimester">1st trimester</string>
</resources>