<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:fadeScrollbars="false" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="661dp"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/str_treatement_uncomplicated_malaria_preg_women"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Brown" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_1st_trimester"
            android:textAppearance="@style/NormalBlueText" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_women_preg_1st_trim" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border2"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:padding="20dp"
            android:showDividers="middle" >

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_headache"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_lassitube"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_fatigue"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_abdominal_discomfort"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_muscle_joint_aches"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_maybe_fever_chills_prespiration_anorexia"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_preg_malaria_womb_contraction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_note_pregnant_women_symptoms"
            android:textAppearance="@style/ItalicsTextSmallerDark"
            android:textColor="@color/TextColorWine" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/Brown" />

    </LinearLayout>

</LinearLayout>
</ScrollView>