<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="661dp"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Malaria Prophylaxis with SP for Pregnant Women  "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Brown" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_intermittent_preventive_treatment_with_sulf"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Blue" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_target_groups_for_iptp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/WhileWaitingForTransport" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border2"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle" >

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_all_preg_women_no_malaria_16_36"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_adolescent_preg_10_24"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_anc_when3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_preg_women_with_sickle_cell"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_preg_women_ff_conditions_exempted_from_sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/TextColorWine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border2"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:padding="20dp"
            android:showDividers="middle" >

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_1st_trimester_preg"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_known_to_have_glucose_6_phosphate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_known_severe_liver_disease"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_with_unexplained_recurrent_jaundice"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_allergic_sulphur"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_received_treatment_sulphur_drugs"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_hiv_aids_cotrimoxazole"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_preg_beyond_36"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <org.grameenfoundation.cch.utils.TextViewBullets
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_women_breastfeeding"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/Brown" />

    </LinearLayout>

</LinearLayout>
</ScrollView>