<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" >

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/White"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:background="@color/White"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/str_postpartum_family_planning"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:background="@color/TakeAction"
            android:orientation="vertical" >

          

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="TextView" />

<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pnc_visits"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/productID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_return_first_follow_up"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

             <TextView
                 android:id="@+id/TextView01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_pnc_visit_1"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_within_48_hr_delivery"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_pnc_visit_2"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/TextView02"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_6_7_days_after_delivery"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

         <TableRow
             android:id="@+id/TableRow01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp" >

             <TextView
                 android:id="@+id/TextView03"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_pnc_visit_3"
                 android:textAppearance="?android:attr/textAppearanceLarge" />

             <TextView
                 android:id="@+id/TextView04"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_6_weeks_after_delivery"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>

    </TableLayout>

<TextView
    android:id="@+id/TextView14"
    android:layout_width="wrap_content"
    android:layout_height="38dp"
    android:layout_weight="0.02"
    android:text="@string/str_advise_mother_when_return_health_facility_immediately"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@color/Blue" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.08"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView12"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_breastfeeding_poorly"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_reduced_activity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView11"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_becomes_sicker"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_develops_fever"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_feels_usually_cold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView08"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_fast_breathing"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView079"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_difficulty_breathing"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />

    <TextView
        android:id="@+id/TextView0790"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="10dp"
        android:paddingRight="1dp"
        android:text="@string/str_palms_soles_appear_yelllow"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextBrown" />
</LinearLayout>
        
    </LinearLayout>

</ScrollView>