<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/str_encounterd_client_given_birth_last_2weeks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/highlight_light" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:text="@string/str_severe_anaemia"
        android:textColor="@color/White" />
<View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />
    <Button
        android:id="@+id/button_testNotDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Curry"
        android:text="@string/str_anaemia_moderate"
        android:textColor="@color/White" />
<View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />
    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:text="@string/str_anaemia_no"
        android:textColor="@color/White" />

</LinearLayout>
